v2.10.1
  * fixed scope issue with GC instrumentation, subtracting time from caller
  * added # of GC calls to GC instrumentation
  * renamed the dispatcher metric
  * refactored stats_engine code for readability
  
v2.10.0
  * support unicorn
  * instrumentation of GC for REE and MRE with GC patch
  * support agent restarting when changes are made to the account
  * removed #newrelic_notice_error from Object class, replaced by NewRelic::Agent#notic_error 
  * collect histogram statistics
  * add custom parameters to newrelic_notice_error call to display
    extra info for errors
  * add method disable_all_tracing(&block) to execute a block without
    capturing metrics
  * newrelic_ignore now blocks all instrumentation collection for
    the specified actions
  * added doc to method_tracer API and removed second arg
    requirement for add_method_tracer call
  * instrumentation for Net::HTTP
  * remove method_tracer shim to avoid timing problems in monitoring daemons
  * for non-rails daemons, look at APP_ROOT and NRCONFIG env vars for custom locations
      
v2.9.4
  * Clamp size of data sent to server
  * Reset statistics for passenger when forking to avoid erroneous data
  * Fix problem deserializing errors from the server
  * Fix incompatibility with postgres introduced in 2.9.

v2.9.3.
  * Fix startup failure in Windows due to memory sampler
  * Add JRuby environment information
   
v2.9.2.
  * change default apdex_t to 0.5 seconds 
  * fix bug in deployments introduced by multi_homed setting
  * support overriding the log in the agent api
  * fix JRuby problem using objectspace
  * display custom parameters when looking at transactions in dev mode 
  * display count of sql statements on the list of transactions in dev mode
  * fixes for merb--thanks to Carl Lerche

v2.9.1.
  * add newrelic_ignore_apdex method to controller classes to allow
    you to omit some actions from apdex statistics