@@ -55,10 +55,11 @@ module NewRelic::Agent::Instrumentation
     end
     
     private
-    # memoize the stats to avoid the cost of the lookup each time.
+    
     def dispatch_stat
       NewRelic::Agent.agent.stats_engine.get_stats_no_scope 'HttpDispatcher'  
     end
+    
     def mongrel_queue_stat
       NewRelic::Agent.agent.stats_engine.get_stats_no_scope 'WebFrontend/Mongrel/Average Queue Time'  
     end
