@@ -1,10 +1,5 @@
 module NewRelic::Agent::Samplers
   class CpuSampler < NewRelic::Agent::Sampler
-    if defined? JRuby
-      require 'java'
-      include_class 'java.lang.management.ManagementFactory'
-      include_class 'com.sun.management.OperatingSystemMXBean'
-    end
     attr_reader :last_time
     def initialize
       super :cpu
@@ -22,16 +17,14 @@ module NewRelic::Agent::Samplers
     def systemtime_stats
       stats_engine.get_stats_no_scope("CPU/System Time")
     end
+    
+    def self.supported_on_this_platform?
+      not defined?(Java)
+    end
+    
     def poll
       now = Time.now
-      if defined? JRuby
-        osMBean = ManagementFactory.getOperatingSystemMXBean();
-        java_utime = osMBean.getProcessCpuTime();  # ns
-        t = Struct::Tms.new
-        t.utime = t.stime = (-1 == java_utime ? 0.0 : java_utime/1e9)
-      else
-        t = Process.times
-      end
+      t = Process.times
       if @last_time
         elapsed = now - @last_time
         return if elapsed < 1 # Causing some kind of math underflow
